add functionality to weather button regarding jaco and london

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>Please answer these 5 simple questions to find a location to fit your tastes.</p>
 
     <h4>Activity preference:</h4>
+
     <div class="radio">
       <label>
         <input type="radio" name="activity" value="adventure">
@@ -72,39 +73,54 @@
       </label>
     </div>
 
-    <h4>Weather preference:</h4>
-    <div class="radio">
-      <label>
-        <input type="radio" name="weather" value="warm">
-        Warm
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="weather" value="cool">
-        Cool
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="weather" value="either">
-        Other factors are more important
-      </lable>
-    </div>
 
-    <h4>Current passport:</h4>
-    <div class="radio">
-      <label>
-        <input type="radio" name="passport" value="yes">
-        Yes
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="passport" value="no">
-        No
-      </label>
-    </div>
+    <div id="temp">
+          <h4>Weather preference:</h4>
+          <div class = "radio">
+            <label>
+              <input type="radio" name="weather" value="warm">warm
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="weather" value="cool">cool
+            </label>
+          </div>
+          <button type="submit" class="button">next</button>
+        </div>
+
+  <!--   <div id="temp">
+      <div class="radio">
+        <label>
+          <input type="radio" name="weather" value="warm">
+          Warm
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="weather" value="cool">
+          Cool
+        </label>
+      </div>
+      <button type="submit" class="button">Next</button>
+    </div> -->
+
+    
+
+        <h4>Current passport:</h4>
+        <div class="radio">
+          <label>
+            <input type="radio" name="passport" value="yes">
+            Yes
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="passport" value="no">
+            No
+          </label>
+        </div>
+        <button type="submit" class="button">Show vacation!</button>
 
   </div>
   </body>
