create functioning radio button for temperature and passport options returning the correct vacation destination

--- a/index.html
+++ b/index.html
@@ -74,54 +74,47 @@
     </div>
 
 
-    <div id="temp">
-          <h4>Weather preference:</h4>
-          <div class = "radio">
-            <label>
-              <input type="radio" name="weather" value="warm">warm
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="weather" value="cool">cool
-            </label>
-          </div>
-          <button type="submit" class="button">next</button>
-        </div>
-
-  <!--   <div id="temp">
-      <div class="radio">
+    <div id="result">
+      <h4>Weather preference:</h4>
+      <div class = "radio">
         <label>
-          <input type="radio" name="weather" value="warm">
-          Warm
+          <input type="radio" name="weather" value="warm">warm
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="weather" value="cool">
-          Cool
+          <input type="radio" name="weather" value="cool">cool
+        </label>
+
+      <h4>Current passport:</h4>
+      <div class="radio">
+        <label>
+          <input type="radio" name="passport" value="yes">yes
         </label>
       </div>
-      <button type="submit" class="button">Next</button>
-    </div> -->
+      <div class="radio">
+        <label>
+          <input type="radio" name="passport" value="no">no
+        </label>
+      </div>
+      <button type="submit" class="button">Show vacation!</button>
+    </div>
 
-    
+    <div id="jaco">
+      <h2>Jaco!</h2>
+    </div>
 
-        <h4>Current passport:</h4>
-        <div class="radio">
-          <label>
-            <input type="radio" name="passport" value="yes">
-            Yes
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="passport" value="no">
-            No
-          </label>
-        </div>
-        <button type="submit" class="button">Show vacation!</button>
+    <div id="neworleans">
+      <h2>New Orleans!</h2>
+    </div>
 
+    <div id="london">
+      <h2>London!</h2>
+    </div>
+
+    <div id="parkcity">
+      <h2>Parkcity!</h2>
+    </div>
   </div>
   </body>
 </html>
