make the adventure radio button show park city, never london

--- a/index.html
+++ b/index.html
@@ -10,72 +10,64 @@
   <body>
   <div class="container">
     <h1>Find your ideal vacation spot!</h1>
-    <p>Please answer these 5 simple questions to find a location to fit your tastes.</p>
-
-    <h4>Activity preference:</h4>
-
-    <div class="radio">
-      <label>
-        <input type="radio" name="activity" value="adventure">
-        Adventure and outdoor activities
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="activity" value="culture">
-        Cultural enrichment
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="activity" value="relax">
-        Relaxation
-      </lable>
-    </div>
-
-    <h4>Dining preference:</h4>
-    <div class="radio">
-      <label>
-        <input type="radio" name="dining" value="fine">
-        Fine dining
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="dining" value="regional">
-        Regional
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="dining" value="trendy">
-        Cutting Edge
-      </label>
-    </div>
-
-    <h4>Shopping preference:</h4>
-    <div class="radio">
-      <label>
-        <input type="radio" name="shopping" value="variety">
-        Lots of options
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="shopping" value="botique">
-        Small botiques
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="shopping" value="market">
-        Outdoor market
-      </label>
-    </div>
-
+    <p>Please answer these 5 simple questions to find the perfect location to fit your tastes.</p>
 
     <div id="result">
-      <h4>Weather preference:</h4>
+      <h4>Activity preference:</h4>
+      <div class="radio">
+        <label>
+          <input type="radio" name="activity" value="adventure">
+          Adventure and outdoor activities
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="activity" value="culture">
+          Cultural enrichment
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="activity" value="relax">
+          Relaxation
+        </label>
+      </div>
+
+      <h4>Dining preference:</h4>
+      <div class="radio">
+        <label>
+          <input type="radio" name="dining" value="fine">
+          Fine dining
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="dining" value="regional">
+          Regional cuisine
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="dining" value="trendy">
+          New and hip
+        </label>
+      </div>
+
+      <h4>Shopping preference:</h4>
+      <div class="radio">
+        <label>
+          <input type="radio" name="shopping" value="botique">
+          Small botiques
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="shopping" value="market">
+          Outdoor market
+        </label>
+      </div>
+
+    <h4>Weather preference:</h4>
       <div class = "radio">
         <label>
           <input type="radio" name="weather" value="warm">warm
@@ -100,8 +92,8 @@
       <button type="submit" class="button">Show vacation!</button>
     </div>
 
-    <div id="jaco">
-      <h2>Jaco!</h2>
+    <div id="cabo">
+      <h2>Cabo san Lucas!</h2>
     </div>
 
     <div id="neworleans">
@@ -113,7 +105,7 @@
     </div>
 
     <div id="parkcity">
-      <h2>Parkcity!</h2>
+      <h2>Park City!</h2>
     </div>
   </div>
   </body>
