hide survey page when displaying results, but the reverse is not yet true

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
   <div class="container">
     <div class="jumbotron">
-      <h1>Ideal Vacation Location!</h1>
+      <h1>Ideal Vacation Location</h1>
     </div>
-
-    <h4><strong>Simply answer these 6 questions to find the perfect spot for your next vacation.</strong></h4>
-    <div id="result">
+    <div class="survey-hidden">
+      <h4><strong>Simply answer these 6 questions to find the perfect spot for your next vacation.</strong></h4>
+      <div id="result">
 
       <div class="row">
         <div class="col-sm-4">
@@ -132,26 +132,36 @@
       </div>
       <button type="submit" class="button">Show vacation!</button>
     </div>
+  </div>
 
-    <div id="cabo">
-      <h2>Cabo san Lucas, Mexico!</h2>
-      <img src="img/cabo.jpeg" alt="photo of Cabo San Lucas">
-    </div>
+    <div class="results-hidden">
+      <div id="cabo">
+        <h2>Cabo san Lucas, Mexico!</h2>
+        <img src="img/cabo.jpeg" alt="photo of Cabo San Lucas">
+        <button type="submit" class="button">Return to Survey</button>
+      </div>
 
-    <div id="neworleans">
-      <h2>New Orleans, Louisiana!</h2>
-      <img src="img/neworleans.jpeg" alt="photo of New Orleans">
-    </div>
+      <div id="neworleans">
+        <h2>New Orleans, Louisiana!</h2>
+        <img src="img/neworleans.jpeg" alt="photo of New Orleans">
+        <button type="submit" class="button">Return to Survey</button>
+      </div>
 
-    <div id="london">
-      <h2>London, England!</h2>
-      <img src="img/london.jpg" alt="photo of London">
-    </div>
+      <div id="london">
+        <h2>London, England!</h2>
+        <img src="img/london.jpg" alt="photo of London">
+        <button type="submit" class="button">Return to Survey</button>
+      </div>
 
-    <div id="parkcity">
-      <h2>Park City, Utah!</h2>
-      <img src="img/parkcity.jpeg" alt="photo of Park City">
+      <div id="parkcity">
+        <h2>Park City, Utah!</h2>
+        <img src="img/parkcity.jpeg" alt="photo of Park City">
+        <button type="submit" class="button">Return to Survey</button>
+      </div>
     </div>
+  </div>
+
+  </div>
   </div>
   </body>
 </html>
