--- a/index.html
+++ b/index.html
@@ -12,156 +12,146 @@
     <div class="jumbotron">
       <h1>Ideal Vacation Location</h1>
     </div>
-    <div class="survey-hidden">
-      <h4><strong>Simply answer these 6 questions to find the perfect spot for your next vacation.</strong></h4>
-      <div id="result">
+      <div id="survey-hidden">
+        <h4><strong>Simply answer these 6 questions to find the perfect spot for your next vacation.</strong></h4>
 
-      <div class="row">
-        <div class="col-sm-4">
-          <h4>Lodging preference:</h4>
-          <div class="radio">
-            <label>
-              <input type="radio" name="lodging" value="resort">
-              Resort
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="lodging" value="airbnb">
-              Air BnB
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="lodging" value="hostel">
-              Hostel
-            </label>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <h4>Activity preference:</h4>
-          <div class="radio">
-            <label>
-              <input type="radio" name="activity" value="adventure">
-              Adventure
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="activity" value="culture">
-              Cultural enrichment
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="activity" value="relax">
-              Relaxation
-            </label>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <h4>Dining preference:</h4>
-          <div class="radio">
-            <label>
-              <input type="radio" name="dining" value="fine">
-              Fine dining
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="dining" value="regional">
-              Regional cuisine
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="dining" value="trendy">
-              New and hip
-            </label>
-          </div>
-        </div>
-
-
-      </div>
-
-      <div class ="row">
-          <div class="col-sm-4">
-            <h4>Shopping preference:</h4>
-            <div class="radio">
-              <label>
-                <input type="radio" name="shopping" value="botique">
-                Small botiques
-              </label>
+          <div class="row">
+            <div class="col-sm-4">
+              <h4>Lodging preference:</h4>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="lodging" value="resort">
+                  Resort
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="lodging" value="airbnb">
+                  Air BnB
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="lodging" value="hostel">
+                  Hostel
+                </label>
+              </div>
             </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="shopping" value="market">
-                Outdoor market
-              </label>
+
+            <div class="col-sm-4">
+              <h4>Activity preference:</h4>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="activity" value="adventure">
+                  Adventure
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="activity" value="culture">
+                  Cultural enrichment
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="activity" value="relax">
+                  Relaxation
+                </label>
+              </div>
+            </div>
+
+            <div class="col-sm-4">
+              <h4>Dining preference:</h4>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="dining" value="fine">
+                  Fine dining
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="dining" value="regional">
+                  Regional cuisine
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="dining" value="trendy">
+                  New and hip
+                </label>
+              </div>
             </div>
           </div>
 
-          <div class="col-sm-4">
-          <h4>Weather preference:</h4>
-          <div class = "radio">
-            <label>
-              <input type="radio" name="weather" value="warm">Warm
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="weather" value="cool">Cool
-            </label>
-          </div>
-        </div>
+          <div class ="row">
+            <div class="col-sm-4">
+              <h4>Shopping preference:</h4>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="shopping" value="botique">
+                  Small botiques
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="shopping" value="market">
+                  Outdoor market
+                </label>
+              </div>
+            </div>
 
-        <div class="col-sm-4">
-          <h4>Current passport:</h4>
-          <div class="radio">
-            <label>
-              <input type="radio" name="passport" value="yes">Yes
-            </label>
+            <div class="col-sm-4">
+              <h4>Weather preference:</h4>
+              <div class = "radio">
+                <label>
+                  <input type="radio" name="weather" value="warm">Warm
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="weather" value="cool">Cool
+                </label>
+              </div>
+            </div>
+
+            <div class="col-sm-4">
+              <h4>Current passport:</h4>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="passport" value="yes">Yes
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="passport" value="no">No
+                </label>
+              </div>
+            </div>
           </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="passport" value="no">No
-            </label>
-          </div>
-        </div>
+          <button type="submit" class="button" id="show">Show vacation!</button>
       </div>
-      <button type="submit" class="button">Show vacation!</button>
-    </div>
-  </div>
 
-    <div class="results-hidden">
+
       <div id="cabo">
         <h2>Cabo san Lucas, Mexico!</h2>
         <img src="img/cabo.jpeg" alt="photo of Cabo San Lucas">
-        <button type="submit" class="button">Return to Survey</button>
       </div>
 
       <div id="neworleans">
         <h2>New Orleans, Louisiana!</h2>
         <img src="img/neworleans.jpeg" alt="photo of New Orleans">
-        <button type="submit" class="button">Return to Survey</button>
       </div>
 
       <div id="london">
         <h2>London, England!</h2>
         <img src="img/london.jpg" alt="photo of London">
-        <button type="submit" class="button">Return to Survey</button>
       </div>
 
       <div id="parkcity">
         <h2>Park City, Utah!</h2>
-        <img src="img/parkcity.jpeg" alt="photo of Park City">
-        <button type="submit" class="button">Return to Survey</button>
+        <img src="img/parkcity.jpeg" alt="photo of Park City" height="65%" width="65%">
       </div>
-    </div>
-  </div>
-
-  </div>
+      <button type="submit" class="button" id="survey">Return to Survey</button>
   </div>
   </body>
 </html>
