add color to destination headers

--- a/index.html
+++ b/index.html
@@ -134,22 +134,22 @@
 
       <div id="cabo">
         <h2>Cabo san Lucas, Mexico!</h2>
-        <img src="img/cabo.jpeg" alt="photo of Cabo San Lucas">
+        <img src="img/cabo.jpeg" alt="photo of Cabo San Lucas" height="45%" width="45%">
       </div>
 
       <div id="neworleans">
         <h2>New Orleans, Louisiana!</h2>
-        <img src="img/neworleans.jpeg" alt="photo of New Orleans">
+        <img src="img/neworleans.jpeg" alt="photo of New Orleans" height="50%" width="50%">
       </div>
 
       <div id="london">
         <h2>London, England!</h2>
-        <img src="img/london.jpg" alt="photo of London">
+        <img src="img/london.jpg" alt="photo of London" height="63%" width="63%">
       </div>
 
       <div id="parkcity">
         <h2>Park City, Utah!</h2>
-        <img src="img/parkcity.jpeg" alt="photo of Park City" height="65%" width="65%">
+        <img src="img/parkcity.jpeg" alt="photo of Park City" height="52%" width="52%">
       </div>
       <button type="submit" class="button" id="survey">Return to Survey</button>
   </div>
